@@ -164,6 +164,7 @@ wxMSW:
 - Don't send bogus root selection events when clicking wxTreeCtrl (sbrowne).
 - Avoid bogus assert after calling wxDatePickerCtrl::SetRange().
 - Add solution file for building with MSVS 2014 (Peter Tissen).
+- Correct wxGetOsDescription() for Windows 10 (Tobias Taschner).
 
 wxOSX/Cocoa:
 
